# teamwork

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  dev.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  .env.example  Dockerfile  MEMORY.md  README.md  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py
backend/app/agents/personas/: __init__.py
backend/app/agents/prompts/: __init__.py  coaching_prompts.py  formatting_instructions.py  skills_template.md  software_dev_prompts.py  soul_template.md
backend/app/agents/runtime/: __init__.py  docker_runner.py  subprocess_runner.py
backend/app/models/: __init__.py  activity.py  agent.py  base.py  channel.py  memory.py  message.py  project.py  task.py
backend/app/routers/: __init__.py  agents.py  channels.py  coaching.py  external.py  messages.py  onboarding.py  projects.py  tasks.py  terminal.py  workspace.py
backend/app/services/: __init__.py  agent_manager.py  app_runner.py  base.py  coaching_analyzer.py  coaching_manager.py  coaching_personality_generator.py  image_generator.py  memory_store.py  onboarding_strategy.py  personality_generator.py  pm_manager.py  progress_tracker.py  project_analyzer.py  task_queue.py
backend/app/utils/: __init__.py  text.py  workspace.py
backend/app/websocket/: __init__.py  connection_manager.py
backend/tests/: __init__.py  conftest.py  test_memory_extractor.py  test_memory_integration.py  test_memory_model.py  test_memory_store.py
docker/: agent.Dockerfile  terminal.Dockerfile
docs/: BACKLOG.md  CNAME  README.md  index.html
docs/comparisons/: microsoft-loop.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/e2e/: teamwork-ui.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/chat/: ChannelHeader.tsx  ChannelSidebar.tsx  ClaudeCodeStatus.tsx  EmojiPicker.tsx  MessageInput.tsx  MessageList.tsx  ThreadView.tsx  index.ts
frontend/src/components/common/: Avatar.tsx  Button.tsx  Card.tsx  CommandPalette.tsx  Input.tsx  MarkdownContent.tsx  TextArea.tsx  TimezonePicker.tsx  ToastContainer.tsx  index.ts
frontend/src/components/onboarding/: AppDescriptionStep.tsx  ClarifyingQuestions.tsx  CoachPreview.tsx  ConfigOptions.tsx  OnboardingWizard.tsx  TeamPreview.tsx  TeamTypeStep.tsx  index.ts
frontend/src/components/panels/: AgentPlanCard.tsx  AgentWorldPanel.tsx  BrowserChatSidebar.tsx  BrowserPanel.tsx  ClaudePanel.tsx  DesktopPanel.tsx  FileBrowser.tsx  GraphPanel.tsx  GraphVisualView.tsx  HomeDashboard.tsx  LibraryPanel.tsx  LibrarySpaceView.tsx  LiveSessionsPanel.tsx  MemoryPanel.test.tsx  MemoryPanel.tsx  ObservabilityPanel.tsx  PluginsSection.tsx  ProgressPanel.tsx  SchedulerPanel.tsx  SettingsPanel.tsx  SpacePage.tsx  TaskBoard.tsx  TerminalPanel.tsx  index.ts
frontend/src/components/profiles/: ActivityTrace.tsx  AgentLogViewer.tsx  ProfileCard.tsx  ProfileModal.tsx  index.ts
frontend/src/components/terminal/: Terminal.tsx
frontend/src/hooks/: index.ts  useApi.ts  useIsMobile.ts  useKeyboardShortcuts.ts  useWebSocket.ts
frontend/src/pages/: Home.tsx  ProjectWorkspace.tsx  Projects.tsx  index.ts
frontend/src/stores/: index.ts  messageStore.ts  projectStore.ts  toastStore.ts  uiStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: spaceTheme.ts
src/teamwork/: __init__.py  cli.py  config.py  desktop_vnc.html  main.py  proxy_auth.py
src/teamwork/models/: __init__.py  activity.py  agent.py  base.py  channel.py  memory.py  message.py  project.py  task.py
src/teamwork/routers/: __init__.py  agent_plan.py  agents.py  browser.py  channels.py  claude_code.py  content.py  external.py  library.py  memory.py  messages.py  observability.py  plugins.py  prax.py  projects.py  scheduler.py  tasks.py  terminal.py  uploads.py  workspace.py
src/teamwork/services/: __init__.py
src/teamwork/utils/: __init__.py  workspace.py
src/teamwork/websocket/: __init__.py
tests/: conftest.py  test_app.py  test_external_api.py  test_internal_api.py  test_kanban.py  test_proxy_auth.py
