[project]
name = "teamwork"
version = "0.14.0"
description = "Agent-agnostic collaboration shell — Slack-like web UI for AI agent teams"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "websockets>=12.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
teamwork = "teamwork.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "respx>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teamwork"]

[tool.hatch.build]
artifacts = ["src/teamwork/static/**"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Start lenient — tighten as codebase improves
select = ["E", "F"]
ignore = [
    "E402",  # module-level import not at top (FastAPI pattern)
    "E501",  # line too long
    "E711",  # comparison to None
    "E712",  # comparison to True/False
    "F401",  # imported but unused (many re-exports)
    "F811",  # redefinition of unused name (shadowed imports in long routers)
    "F821",  # undefined name (forward refs / deferred imports)
    "F841",  # local variable assigned but never used
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = ["src/teamwork"]
branch = true
